force-app/main/default/objects/AccountContactRelationCreated__e/AccountContactRelationCreated__e.object-meta.xml
<CustomObject>
    <label>AccountContactRelationCreated</label>
    <pluralLabel>AccountContactRelationsCreated</pluralLabel>
</CustomObject>