force-app/main/default/objects/AccountContactRelationCreated__e/fields/MailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryCode__c</fullName>
    <label>MailingCountryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>