force-app/main/default/objects/AccountContactRelationCreated__e/fields/MailingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingHouseNumber__c</fullName>
    <label>MailingHouseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>