force-app/main/default/objects/AccountContactRelationCreated__e/fields/MailingPostal__c.field-meta.xml
<CustomField>
    <fullName>MailingPostal__c</fullName>
    <label>MailingPostal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>