force-app/main/default/objects/AccountContactRelationCreated__e/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>